--- a/Projects/WestRoxburyHomes/ReadMe
+++ b/Projects/WestRoxburyHomes/ReadMe
@@ -3,3 +3,7 @@ Data Mining for Business Analytics with R
 Amazon Purchase: https://www.amazon.com/Data-Mining-Business-Analytics-Applications-ebook-dp-B075MSG9F6/dp/B075MSG9F6/ref=mt_other?_encoding=UTF8&me=&qid=1600031657
 
 The West Roxbury Data Set is used as an example in Chapter 2. 
+
+I frequently return to the West Roxbury dataset to try out new tools and techniques. 
+The code in different documents does not always carry over and is best run as different projects. 
+To connect everything variable names would have to be updated. 
