--- a/Projects/WestRoxburyHomes/ReadMe
+++ b/Projects/WestRoxburyHomes/ReadMe
@@ -4,6 +4,9 @@ Amazon Purchase: https://www.amazon.com/Data-Mining-Business-Analytics-Applicati
 
 The West Roxbury Data Set is used as an example in Chapter 2. 
 
-I frequently return to the West Roxbury dataset to try out new tools and techniques. 
+After using the dataset for one class assignment I frequently return to the West Roxbury dataset to try out new tools and techniques. 
+
+I have used in subsequent classes and numerous assignments that allow for any datasets. 
+
 The code in different documents does not always carry over and is best run as different projects. 
 To connect everything variable names would have to be updated. 
