--- a/Projects/Seatbelts/ReadMe
+++ b/Projects/Seatbelts/ReadMe
@@ -1,3 +1,5 @@
+# Seatbelts: Exploring Base R dataset 
+
 This code analyzes a data set that comes with Base R - Seatbelts. I have reviewed the file and included 2 visualizations.
 
 This was one of the first assignments I completed in R.
